--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-<script> 
 
-</script>
+<body>
+  <div id="root"></div>
 </body>
+<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+<script>
+  const root = document.getElementById("root");
+  const span = React.createElement("span", { id: "cool-span",style:{color:"red"} }, "Hello span");
+  ReactDOM.render(span, root);
+</script>
+
 </html>
