--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
 <script>
   const root = document.getElementById("root");
-  const span = React.createElement("span", { id: "cool-span",style:{color:"red"} }, "Hello span");
-  ReactDOM.render(span, root);
+  const h3 = React.createElement("h3", { onMouseEnter: () => console.log("mouse enter") }, "Hello span");
+  const btn = React.createElement("button", { onClick: () => console.log("click!"),style:{backgroundColor:"tomato"} }, "Click me");
+  const container = React.createElement("div", null, [h3, btn]);
+  ReactDOM.render(container, root);
 </script>
 
 </html>
