--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 
 <body>
   <div id="root"></div>
+
+  <script src="https://unpkg.com/react@17.0.2/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  <script type="text/babel">
+    const root = document.getElementById("root");
+    const Title = <h3 id='title' onMouseEnter={() => console.log("mouse enter")}>Hello title</h3>
+    const button = <button style={{ backgroundColor: 'tomato' }} onClick={() => console.log("click!")}>Click me</button>
+    // const h3 = React.createElement("h3", { onMouseEnter: () => console.log("mouse enter") }, "Hello title");
+    // const btn = React.createElement("button", { onClick: () => console.log("click!"),style:{backgroundColor:"tomato"} }, "Click me");
+    const container = React.createElement("div", null, [Title, button]);
+    ReactDOM.render(container, root);
+  </script>
 </body>
-<script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
-<script>
-  const root = document.getElementById("root");
-  const h3 = React.createElement("h3", { onMouseEnter: () => console.log("mouse enter") }, "Hello span");
-  const btn = React.createElement("button", { onClick: () => console.log("click!"),style:{backgroundColor:"tomato"} }, "Click me");
-  const container = React.createElement("div", null, [h3, btn]);
-  ReactDOM.render(container, root);
-</script>
 
 </html>
