--- a/index.html
+++ b/index.html
@@ -9,12 +9,10 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-    const Title = <h3 id='title' onMouseEnter={() => console.log("mouse enter")}>Hello title</h3>
-    const button = <button style={{ backgroundColor: 'tomato' }} onClick={() => console.log("click!")}>Click me</button>
-    // const h3 = React.createElement("h3", { onMouseEnter: () => console.log("mouse enter") }, "Hello title");
-    // const btn = React.createElement("button", { onClick: () => console.log("click!"),style:{backgroundColor:"tomato"} }, "Click me");
-    const container = React.createElement("div", null, [Title, button]);
-    ReactDOM.render(container, root);
+    const Title = ()=><h3 id='title' onMouseEnter={() => console.log("mouse enter")}>Hello title</h3>
+    const Button = ()=><button style={{ backgroundColor: 'tomato' }} onClick={() => console.log("click!")}>Click me</button>
+    const Container =()=> <div><Title/><Button/></div>;
+    ReactDOM.render(<Container/>, root);
   </script>
 </body>
 
