--- a/index.html
+++ b/index.html
@@ -9,21 +9,16 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-    let counter=0;
-    function countUp(){
-      counter++;
-      render();
-    }
-    function render(){
-      ReactDOM.render(<Container/>, root);
-    }
-    const Container =()=>(
+    const App =()=>{
+      const [counter,modifier]=React.useState(0);
+      console.log(data)
+      return(
       <div>
         <h3>Total clicks: {counter}</h3>
         <button onClick={countUp}>Click me</button>
       </div>
-    );
-    render();
+    )};
+    ReactDOM.render(<App/>, root);
   </script>
 </body>
 
