--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
     const root = document.getElementById("root");
-    const App =()=>{
+
+    const App=()=>{
       const [counter,modifier]=React.useState(0);
-      console.log(data)
-      return(
+      return (
       <div>
         <h3>Total clicks: {counter}</h3>
-        <button onClick={countUp}>Click me</button>
+        <button>Click me</button>
       </div>
-    )};
+    );
+  };
     ReactDOM.render(<App/>, root);
   </script>
 </body>
