--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
     const root = document.getElementById("root");
 
     const App=()=>{
-      const [counter,modifier]=React.useState(0);
+      let [counter,setCounter]=React.useState(0);
+      const onClick = ()=>{
+        setCounter(++counter);
+      }
       return (
       <div>
         <h3>Total clicks: {counter}</h3>
-        <button>Click me</button>
+        <button onClick={onClick}>Click me</button>
       </div>
     );
   };
