--- a/index.html
+++ b/index.html
@@ -9,24 +9,31 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
 
-    const App=()=>{
-      const [minutes,setMinutes]= React.useState();
-      const onChange=(event)=>{
+    const App = () => {
+      const [minutes, setMinutes] = React.useState(0);
+      const onChange = (event) => {
         setMinutes(event.target.value);
       }
+      const reset=()=>{setMinutes(0)}
+      
       return (
-      <div>
-        <h1 className="hi">Converter</h1>
-        <label htmlFor="minutes">Minutes</label>
-        <input value={minutes} id="minutes" placeholder="Minutes" type="number" onChange={onChange}/>
-        <h4>you want to convert: {minutes}</h4>
-        <label htmlFor="hours">Hours</label>
-        <input id="hours" placeholder="Hours" type="number"/>
-      </div>
-    );
-  };
-  const root = document.getElementById("root");
-  ReactDOM.render(<App/>, root);
+        <div>
+          <h1 className="hi">Converter</h1>
+
+          <div>
+            <label htmlFor="minutes">Minutes</label>
+            <input value={minutes} id="minutes" placeholder="Minutes" type="number" onChange={onChange} />
+          </div>
+          <div>
+            <label htmlFor="hours">Hours</label>
+            <input value={Math.round(minutes/60)} id="hours" placeholder="Hours" type="number" disabled/>
+          </div>
+          <button onClick={reset}>Reset</button>
+        </div>
+      );
+    };
+    const root = document.getElementById("root");
+    ReactDOM.render(<App />, root);
   </script>
 </body>
 
