--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
     const App = () => {
       const [amount, setAmount] = React.useState(0);
-      const [flipped,setFilp]=React.useState(false)
+      const [inverted,setInverted]=React.useState(false)
       const onChange = (event) => {
         setAmount(event.target.value);
       }
       const reset=()=>{setAmount(0)}
-      const filp=()=>{
-        setFilp((current)=>!current);
+      const invert=()=>{
+        setInverted((current)=>!current);
         reset();
       }
       return (
@@ -26,14 +26,14 @@
 
           <div>
             <label htmlFor="minutes">Minutes</label>
-            <input value={flipped? amount*60:amount} id="minutes" placeholder="Minutes" type="number" onChange={onChange} disabled={flipped}/>
+            <input value={inverted? amount*60:amount} id="minutes" placeholder="Minutes" type="number" onChange={onChange} disabled={inverted}/>
           </div>
           <div>
             <label htmlFor="hours">Hours</label>
-            <input value={flipped? amount: Math.round(amount/60)} id="hours" placeholder="Hours" type="number" onChange={onChange} disabled={!flipped}/>
+            <input value={inverted? amount: Math.round(amount/60)} id="hours" placeholder="Hours" type="number" onChange={onChange} disabled={!inverted}/>
           </div>
           <button onClick={reset}>Reset</button>
-          <button onClick={filp}>Filp</button>
+          <button onClick={invert}>{inverted ? "Turn back":"Invert"}</button>
         </div>
       );
     };
