--- a/index.html
+++ b/index.html
@@ -40,14 +40,19 @@
       )
   }
   const App = () => {
-    const [index,setIndex]=React.useState(0)
+    const [index,setIndex]=React.useState("0")
+    const onSelect=(event)=>{
+      setIndex(event.target.value);
+    }
       return (
         <div>
           <h1 className="hi">Converter</h1>
-          <select>
-            <option>Minutes & Hours</option>
-            <option>Minutes & Hours</option>
+          <select value={index} onChange={onSelect}>
+            <option value="0">Minutes & Hours</option>
+            <option value="1">KM & Miles</option>
             </select>
+            {index==="0" ? <MinutesToHours/>:null}
+            {index ==="1" ? <KmToMiles/>:null}
           </div>
       );
     };
