--- a/index.html
+++ b/index.html
@@ -8,79 +8,25 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    const MinutesToHours = () => {
-      const [amount, setAmount] = React.useState(0);
-      const [inverted, setInverted] = React.useState(false)
-      const onChange = (event) => {
-        setAmount(event.target.value);
-      }
-      const reset = () => { setAmount(0) }
-      const invert = () => {
-        setInverted((current) => !current);
-        reset();
-      }
-      return (
-        <div>
-          <div>
-            <label htmlFor="minutes">Minutes</label>
-            <input value={inverted ? amount * 60 : amount} id="minutes" placeholder="Minutes" type="number" onChange={onChange} disabled={inverted} />
-          </div>
-          <div>
-            <label htmlFor="hours">Hours</label>
-            <input value={inverted ? amount : Math.round(amount / 60)} id="hours" placeholder="Hours" type="number" onChange={onChange} disabled={!inverted} />
-          </div>
-          <button onClick={reset}>Reset</button>
-          <button onClick={invert}>{inverted ? "Turn back" : "Invert"}</button>
-        </div>
+    const Btn=({text, big})=>{
+      console.log(text)
+      return (<button style={{
+        backgroundColor: "tomato",
+        color: "white",
+        padding: "10px 20px",
+        border:0,
+        borderRadius:10,
+        fontSize: big? 20:10
+      }}>{text}</button>
       );
-    };
-    const KmToMiles = () => {
-      const [km, setKM] = React.useState(0);
-      const [convert, setConvert] = React.useState(false);
-      const onChange = (event) => {
-        setKM(event.target.value);
-      }
-      const onConvert=()=>{
-        setConvert(current=>(!current))
-        clear();
-      }
-      const clear=()=>{
-        setKM(0)
-      }
-      return (
-        <div>
-          <div>
-            <label htmlFor="km">KM</label>
-            <input type="number" id="km" value={convert?(km/0.621371).toFixed(2):km} onChange={onChange} disabled={convert}></input>
-          </div>
-          <div>
-            <label htmlFor="miles">miles</label>
-            <input type="number" id="miles" value={convert?km:(km * 0.621371).toFixed(2)} onChange={onChange} disabled={!convert}></input>
-          </div>
-          <button onClick={clear}>Reset</button>
-          <button onClick={onConvert}>Invert</button>
-        </div>
-      )
     }
-    const App = () => {
-      const [index, setIndex] = React.useState("-1")
-      const onSelect = (event) => {
-        setIndex(event.target.value);
-      }
-      console.log("render w/", index)
-      return (
+    
+    const App = () => { //부모컴포넌트
+      return(
         <div>
-          <h1 className="hi">Converter</h1>
-          <select value={index} onChange={onSelect}>
-            <option value="-1">Select option</option>
-            <option value="0">Minutes & Hours</option>
-            <option value="1">KM & Miles</option>
-          </select>
-          <hr />
-          {index === "0" ? <MinutesToHours /> : null}
-          {index === "1" ? <KmToMiles /> : null}
-        </div>
-      );
+          <Btn text="Save Changes" big={true}/>
+          <Btn text="Confirm"/>
+        </div>)
     };
     const root = document.getElementById("root");
     ReactDOM.render(<App />, root);
