--- a/index.html
+++ b/index.html
@@ -8,24 +8,28 @@
   <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    const Btn=({text, big})=>{
-      console.log(text)
+    const Btn=({text,changeValue})=>{
+      console.log(text, "was rendered")
       return (<button style={{
         backgroundColor: "tomato",
         color: "white",
         padding: "10px 20px",
         border:0,
         borderRadius:10,
-        fontSize: big? 20:10
-      }}>{text}</button>
+        fontSize: 16,
+      }} onClick={changeValue}>{text}</button>
       );
     }
-    
+    const MemorizeBtn=React.memo(Btn);
     const App = () => { //부모컴포넌트
+      const [value,setValue]=React.useState("Save Changes");
+      const changeValue=()=>{
+        setValue("Revert Changes")
+      }
       return(
         <div>
-          <Btn text="Save Changes" big={true}/>
-          <Btn text="Confirm"/>
+          <MemorizeBtn text={value} changeValue={changeValue}/>
+          <MemorizeBtn text="continue"/>
         </div>)
     };
     const root = document.getElementById("root");
