--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script src="https://unpkg.com/prop-types@15.8.1/prop-types.js"></script>
   <script type="text/babel">
-    const Btn=({text,changeValue,fontSize = 14})=>{
+    // button의 컴포넌트 Btn 생성
+    const Btn=({text,changeValue,fontSize = 14})=>{ //{} props받기와 초기값 설정법
       console.log(text, "was rendered")
       return (<button style={{
         backgroundColor: "tomato",
@@ -21,13 +22,14 @@
       }} onClick={changeValue}>{text}</button>
       );
     }
-    const MemorizeBtn=React.memo(Btn);
-    Btn.propTypes={
+
+    const MemorizeBtn=React.memo(Btn); //memo - 값이 같은 부분은 리로드 하지않음: 처리속도 증가
+    Btn.propTypes={ //타입지정 및 필수요구 : 런타임에러 줄이기(타입스크립트 사용하지않을경우?)
       text: PropTypes.string.isRequired,
       fontSize: PropTypes.number,
     }
     const App = () => { //부모컴포넌트
-      const [value,setValue]=React.useState("Save Changes");
+      const [value,setValue]=React.useState("Save Changes"); //state사용
       const changeValue=()=>{
         setValue("Revert Changes")
       }
@@ -38,7 +40,7 @@
         </div>)
     };
     const root = document.getElementById("root");
-    ReactDOM.render(<App />, root);
+    ReactDOM.render(<App />, root); //화면에 렌더링
   </script>
 </body>
 
